# CityBuilder_SFML

./: .clang-format  .gitattributes  .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  FORBIDDEN_FEATURES.md  GUIDELINES.md  REVIEW_06052026.md  main.cc  vcpkg.json
.github/workflows/: discord-notification.yml
api/: CMakeLists.txt
api/include/ai/: npc.h  npc_behaviour_tree.h  npc_factory.h  npc_manager.h  npc_types.h
api/include/graphics/: camera.h  tilemap.h  tilemap_renderer.h  tilesheet.h
api/include/motion/: AStar.h  a_star.h  motor.h  path.h
api/include/resources/: resource.h  resource_manager.h
api/include/ressources/: ressource.h
api/include/tiles/: tile.h  tilemap_generator.h
api/include/ui/: button.h  button_factory.h  clickable.h
api/src/ai/: npc.cc  npc_behaviour_tree.cc  npc_factory.cc  npc_manager.cc
api/src/graphics/: camera.cc  tilemap.cc  tilemap_renderer.cc
api/src/motion/: AStar.cc  a_star.cc  path.cc
api/src/resources/: resource.cc  resource_manager.cc
api/src/ui/: button.cc  clickable.cc
api/test/: test_path.cc
cmake/: CompilerWarnings.cmake
core/: CMakeLists.txt
core/include/: basics.h  game.h  map_generator.h  vec2f.h
core/include/ai/: a_star.h  bt_action.h  bt_composite.h  bt_node.h  bt_selector.h  bt_sequence.h
core/include/assets/: asset_manager.h
core/include/maths/: angle.h  const.h  func.h  vec2.h  vec2f.h
core/include/profiling/: profiling.h
core/include/utils/: log.h  string_literal.h
core/src/: basics.cc  game.cc
core/src/ai/: bt_composite.cc  bt_selector.cc  bt_sequence.cc
core/test/: test_angle.cc  test_pathfinding.cc  test_vec2.cc  test_vec2f.cc  test_vec2f.cpp
game/: CMakeLists.txt
game/include/: game.h  game_types.h  ressource.h  ressource_manager.h  tilemap.h
game/src/: game.cc  tilemap.cc
game/test/: test_asset_manager.cc
